# ukhozi

./: Cargo.toml  Dockerfile  README.md  index.html  webmanifest.json
.github/workflows/: publish.yml
src/: main.rs  models.rs  storage.rs
src/components/: item_check.rs  item_container.rs  item_delete.rs  item_input.rs  list.rs  mod.rs
style/: _fonts.scss  main.scss
