[package]
name = "ukhozi"
version = "0.1.0"
authors = ["Eric Liefaart"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.72"
bounce = "0.8.0"
serde = {version="1.0.183", features = ["derive"]}
serde_json = "1.0.104"
uuid = {version="1.4.1", features = ["v4", "js"]}
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "console", "Storage"] }
yew = { version = "0.20.0", features = ["csr"] }
